Add performance reviews

--- a/public/static/scss/styles.scss
+++ b/public/static/scss/styles.scss
@@ -18,6 +18,9 @@ main::-webkit-scrollbar {
 }
 #custom_col{
     color: $primary;
+    a{
+        text-decoration: none;
+    }
 }
 /* Styling header */
 header {
