--- a/public/static/css/styles.css
+++ b/public/static/css/styles.css
@@ -22,6 +22,9 @@ main::-webkit-scrollbar {
 #custom_col {
   color: #2196F3;
 }
+#custom_col a {
+  text-decoration: none;
+}
 
 /* Styling header */
 header {
