--- a/public/static/scss/styles.scss
+++ b/public/static/scss/styles.scss
@@ -6,6 +6,8 @@ $primary: #2196F3;
 main{
     min-height: 72vh;
     overflow: scroll;
+    display: flex;
+    justify-content: center;
 }
 main::-webkit-scrollbar {
     display: none;
@@ -483,4 +485,113 @@ body {
     &:not(.loading) button:focus {
         border-bottom-width: 4px;
     }
+}
+.main_login{
+    width: 94vw; 
+    height: 85vh;
+}
+.performance{
+    overflow: scroll;
+    height: 70vh;
+    width: 94vw;
+    // border: 1px blue solid;
+    color: $primary;
+    .upper_outer{
+        overflow: scroll;
+        height: 70%;
+        width: 100%;
+        display: flex;
+        // border: 1px blue solid;
+        .emp {
+            font-size: 1.5rem;
+            font-weight: bold;
+            margin-top: 1.2rem;
+            text-align: center;
+            }
+        .user_details{
+            overflow: scroll;
+            width: 35%;
+            height: 100%;
+            // border: 1px blue solid;
+            padding-left: 1.2rem;
+            font-size: 1.2rem;
+            letter-spacing: 0.1rem;
+            label{
+                padding-bottom: 0.3rem;
+            }
+        }
+        .performance_review{
+            overflow: scroll;
+            height: 100%;
+            width: 65%;
+            // border: 1px blue solid;
+            text-align: center;
+            .sub_performance_review{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                button{
+                    border: none;
+                    border: 1px solid $primary;
+                    color: $primary;
+                    background-color: transparent;
+                    outline: none;
+                    font-size: 1.2rem;
+                    margin-left: 2rem;
+                    margin-top: 1.2rem;
+                }
+            }
+            textarea{
+                margin-top: 1rem;
+                width: 95%;
+                height: 95%;
+                border-color: $primary;
+                color: $primary;
+                outline-color: $primary;
+                font-size: 1.2rem;
+            }
+        }
+    }
+    .feedback {
+        overflow: scroll;
+        width: 100%;
+        height: 30%;
+        .sub_feedback{
+            display: flex;
+            textarea{
+                margin-top: 1rem;
+                margin-left: 1.5rem;
+                width: 86%;
+                height: 95%;
+                border-color: $primary;
+                color: $primary;
+                outline-color: $primary;
+                font-size: 1.2rem;
+            }
+            label {
+                font-size: 1.5rem;
+                font-weight: bold;
+                margin-left: 1rem;
+                margin-top: 0.5rem;
+            }
+        }
+    }
+}
+textarea::-webkit-scrollbar{
+    display: none;
+}
+.performance::-webkit-scrollbar {
+    display: none;
+}
+.performance_review::-webkit-scrollbar{
+    display: none;
+}
+.upper_outer::-webkit-scrollbar{
+    display: none;
+}
+.user_details::-webkit-scrollbar{
+    display: none;
+}
+.feedback::-webkit-scrollbar{
+    display: none;
 }
