--- a/view/sign_in.ejs
+++ b/view/sign_in.ejs
@@ -1,5 +1,5 @@
 <main>
-    <div class="wrapper">
+    <div class="wrapper main_login"">
         <form id="login" class="login" method="post">
             <p class="title">Log in</p>
             <div class="account">
