Add feature for performance review. Fixed all known error handling issues on server and fronend side.

--- a/public/static/scss/styles.scss
+++ b/public/static/scss/styles.scss
@@ -577,6 +577,11 @@ body {
         }
     }
 }
+@media (max-width: 992px) {
+    .user_details {
+        display: none;
+    }
+}
 textarea::-webkit-scrollbar{
     display: none;
 }
