--- a/public/static/css/styles.css
+++ b/public/static/css/styles.css
@@ -538,6 +538,11 @@ body {
   margin-top: 0.5rem;
 }
 
+@media (max-width: 992px) {
+  .user_details {
+    display: none;
+  }
+}
 textarea::-webkit-scrollbar {
   display: none;
 }
