Add the basic route and controller for employee feedback and fix the UI of forget password

--- a/view/forgot_password.ejs
+++ b/view/forgot_password.ejs
@@ -1,5 +1,5 @@
 <main>
-    <div class="wrapper">
+    <div class="wrapper main_login">
         <form class="login" id="forgotPassword">
             <p class="title">Reset Password</p>
             <input type="email" placeholder="Email" name = "email" autofocus />
