--- a/public/static/scss/styles.scss
+++ b/public/static/scss/styles.scss
@@ -6,17 +6,20 @@ $primary: #2196F3;
 main{
     min-height: 72vh;
     overflow: scroll;
-    display: flex;
     justify-content: center;
 }
 main::-webkit-scrollbar {
     display: none;
 }
+.custom_table_outer_container{
+    overflow: scroll;
+}
 .custom_table {
-    max-width: 95vw;
-    margin-left: 2.6rem;
+    max-width: 91vw;
     margin-right: 2.6rem;
-    overflow: hidden;
+    min-width: 94vw;
+    margin-left: 3rem;
+    align-self: center;
 }
 #custom_col{
     color: $primary;
@@ -494,6 +497,7 @@ body {
     overflow: scroll;
     height: 70vh;
     width: 94vw;
+    margin-left: 3rem;
     // border: 1px blue solid;
     color: $primary;
     .upper_outer{
@@ -598,5 +602,22 @@ textarea::-webkit-scrollbar{
     display: none;
 }
 .feedback::-webkit-scrollbar{
+    display: none;
+}
+.bi, .feedback_img{
+    font-size: 1.2rem;
+    color: $primary;
+    
+}
+.icon{
+    text-align: center;
+}
+.overflow{
+    max-height: 5rem;
+    max-width: 10rem;
+    overflow-x: hidden;
+    overflow-y: scroll;
+}
+.overflow::-webkit-scrollbar{
     display: none;
 }
