--- a/view/admin/view_employees.ejs
+++ b/view/admin/view_employees.ejs
@@ -14,8 +14,9 @@
                     <th id="custom_col" scope="col">Gender</th>
                     <th id="custom_col" scope="col">Status</th>
                     <th id="custom_col" scope="col">No. of Performances</th>
-                    <th id="custom_col" scope="col">Edit</th>
+                    <th id="custom_col" scope="col">Add Performance</th>
                     <th id="custom_col" scope="col">Toggle Rights</th>
+                    <th id="custom_col" scope="col">Edit</th>
                     <th id="custom_col" scope="col">Delete</th>
                 </tr>
             </thead>
@@ -51,21 +52,31 @@
                             <% if (u.performances.length <= 0) { %>
                                 <%= u.performances.length %>
                                     <% } else { %>
+                                        <%= u.performances.length %>
                                         <a href="/admin/performances?userid=<%= u._id %>">
-                                            <%= u.performances.length %>
+                                            &nbsp&nbsp&nbsp<i class="bi bi-pen"></i>
                                         </a>
                                         <% } %>
                         </td>
                         <td id="custom_col">
-                            <a href="/admin/editemployee?userid=<%= u._id %>"><i class="bi bi-pencil"></i></a>
+                                <div id="rights"><a
+                                href="/admin/performance?userid=<%=u._id%>%>"><i class="fa-solid fa-plus"></i></a></div>
                         </td>
                         <td id="custom_col"">
                             <div id="rights"><a href="/admin/toggleRights?userid=<%=u._id%>&status=<%=u.account_type%>"><%= u.account_type %></a></div>
                         </td>
+                        <td id="custom_col">
+                            <a href="/admin/editemployee?userid=<%= u._id %>"><i class="bi bi-pencil"></i></a>
+                        </td>
+                        
                         <td id="custom_col" data-id="<%= u._id %>">
+                            <%if(u.performances.length === 0){%>
                             <div id="rights">
                                 <a href="/admin/deleteemployee?userid=<%= u._id %>"><i class="bi bi-trash"></i></a>
                             </div>
+                            <%}else{%>
+                                NA
+                                <%}%>
                         </td>
                     </tr>
                     <% }) %>
