--- a/view/_admin_menu.ejs
+++ b/view/_admin_menu.ejs
@@ -20,8 +20,7 @@
                             <li><a class="dropdown-item custom_menu" href="/admin/position">Add Position</a></li>
                             <li><a class="dropdown-item custom_menu" href="/admin/employee">Add Employee</a></li>
                             <li><a class="dropdown-item custom_menu" href="/admin/employees">View Employees</a></li>
-                            <!-- <li><a class="dropdown-item" href="#">Approve Registrations</a></li> -->
-                            <li><a class="dropdown-item custom_menu" href="#">Allocate Performance Reviews</a></li>
+                            <li><a class="dropdown-item custom_menu" href="/admin/allocateperformances">Allocate Performance Reviews</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
