--- a/view/_emp_menu.ejs
+++ b/view/_emp_menu.ejs
@@ -15,6 +15,9 @@
                         <a class="nav-link active" aria-current="page" href="#">Pending Performance Reviews</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/employee/pendingfeedbacks">Pending Feedbacks</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="/logout">Logout</a>
                     </li>
                 </ul>
