--- a/public/static/css/styles.css
+++ b/public/static/css/styles.css
@@ -464,7 +464,6 @@ body {
   height: 70vh;
   width: 94vw;
   margin-left: 3rem;
-  border: 1px blue solid;
   color: #2196F3;
 }
 .performance .upper_outer {
@@ -531,8 +530,9 @@ body {
 .performance .feedback .sub_feedback textarea {
   margin-top: 1rem;
   margin-left: 1.5rem;
-  width: 86%;
+  width: 78%;
   height: 95%;
+  margin-right: 1.5rem;
   border-color: #2196F3;
   color: #2196F3;
   outline-color: #2196F3;
@@ -543,6 +543,15 @@ body {
   font-weight: bold;
   margin-left: 1rem;
   margin-top: 0.5rem;
+}
+.performance .feedback .sub_feedback button {
+  border: none;
+  border: 1px solid #2196F3;
+  color: #2196F3;
+  background-color: transparent;
+  outline: none;
+  font-size: 1.2rem;
+  margin-top: 75%;
 }
 
 @media (max-width: 992px) {
