--- a/view/_admin_menu.ejs
+++ b/view/_admin_menu.ejs
@@ -7,9 +7,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="nav justify-content-center">
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="/admin/timeline">Timeline</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
@@ -20,7 +20,7 @@
                             <li><a class="dropdown-item custom_menu" href="/admin/position">Add Position</a></li>
                             <li><a class="dropdown-item custom_menu" href="/admin/employee">Add Employee</a></li>
                             <li><a class="dropdown-item custom_menu" href="/admin/employees">View Employees</a></li>
-                            <li><a class="dropdown-item custom_menu" href="/admin/allocateperformances">Allocate Performance Reviews</a></li>
+                            <li><a class="dropdown-item custom_menu" href="/admin/allocparticipation">Allocate Participations</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
