--- a/view/_emp_menu.ejs
+++ b/view/_emp_menu.ejs
@@ -8,12 +8,12 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="nav justify-content-center">
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="/employee/timeline">Timeline</a>
-                    </li>
-                    <li class="nav-item">
+                    </li> -->
+                    <!-- <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Pending Performance Reviews</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="/employee/pendingfeedbacks">Pending Feedbacks</a>
                     </li>
