--- a/view/admin/review_participation.ejs
+++ b/view/admin/review_participation.ejs
@@ -10,9 +10,9 @@
         <div class="allocated">
             <div><label>Allocated</label></div>
             <div class="allocated_scroll">
-                <select multiple class="select_mul">
+                <select id="multiselect" class="select_mul" multiple>
                 <% users.forEach(u=> { %>
-                    <option style="white-space: pre-line">
+                    <option style="white-space: pre-line" data-alloc="<%=u._id%>">
                         <%= u.first_name %> <%= u.last_name %> (<%= u.department.dept_name %> :- <%= u.employee_id %>)
                     </option>
                     <% }) %>
@@ -21,10 +21,11 @@
         </div>
         <div class="allocated_to">
             <div><label>Allocated To</label></div>
-            <select class="select_mul custom-select">
+            <select class="select_mul custom-select" id="dropdown">
                 <% users.forEach(u=> { %>
-                    <option style="width: 5rem;">
-                        <%= u.first_name %> <%= u.last_name %> (<%= u.department.dept_name %>
+                    <option style="width: 5rem;" data-alloc_to="<%=u._id%>">
+                        <%= u.first_name %>
+                            <%= u.last_name %> (<%= u.department.dept_name %> :- <%= u.employee_id %>)
                     </option>
                     <% }) %>
             </select>
