Add home page view and improve UI. Add comments for employee and admin controller

--- a/view/_footer.ejs
+++ b/view/_footer.ejs
@@ -1,3 +1,7 @@
 <footer class="no-select">
-    © build by Charanjeet Singh.
+    <div>
+        <h6 class="typewriter">
+            © build by Charanjeet Singh.
+        </h6>
+    </div>
 </footer>
