--- a/public/static/css/styles.css
+++ b/public/static/css/styles.css
@@ -40,9 +40,10 @@ header {
 header div {
   letter-spacing: 0.1rem;
   color: #2196F3;
-  width: 29vw;
+  width: 30vw;
   margin-top: 0.5rem;
   position: relative;
+  margin-left: 6rem;
 }
 
 @media (max-width: 1200px) {
@@ -80,7 +81,7 @@ header div {
 /* The typing effect */
 @keyframes typing {
   0% {
-    width: 50%;
+    width: 76%;
   }
   25% {
     width: 100%;
@@ -89,7 +90,7 @@ header div {
     width: 100%;
   }
   100% {
-    width: 50%;
+    width: 76%;
   }
 }
 /* The typewriter cursor effect */
@@ -698,4 +699,15 @@ textarea::-webkit-scrollbar {
 
 .allocated_scroll::-webkit-scrollbar {
   display: none;
+}
+
+.home_btn {
+  text-align: center;
+  font-size: 1.5rem;
+  margin-bottom: 2.2rem;
+}
+.home_btn a {
+  border: 1px solid #2196F3;
+  padding: 0.5rem;
+  text-decoration: none;
 }
