--- a/public/static/scss/styles.scss
+++ b/public/static/scss/styles.scss
@@ -34,9 +34,10 @@ header {
     div{
         letter-spacing: 0.1rem;
         color: $primary;
-        width: 29vw;
+        width: 30vw;
         margin-top: 0.5rem;
         position: relative;
+        margin-left: 6rem;
     }
 }
 // Header media
@@ -75,7 +76,7 @@ header {
 /* The typing effect */
 @keyframes typing {
     0% {
-        width: 50%
+        width: 76%
     }
 
     25% {
@@ -87,7 +88,7 @@ header {
     }
 
     100% {
-        width: 50%;
+        width: 76%;
     }
 }
 
@@ -728,4 +729,14 @@ textarea::-webkit-scrollbar{
 }
 .allocated_scroll::-webkit-scrollbar{
     display: none;
+}
+.home_btn{
+    text-align: center;
+    font-size: 1.5rem;
+    margin-bottom: 2.2rem;
+    a{
+        border: 1px solid $primary;
+        padding: 0.5rem;
+        text-decoration: none;
+    }
 }
