Add the auto redirect to home page if session exists

--- a/view/_header.ejs
+++ b/view/_header.ejs
@@ -1,7 +1,7 @@
 <header class="no-select">
     <div>
-        <h1 >
-            E.P.R.F. System &nbsp;
+        <h1>
+            <a style="text-decoration: none;" href="/signIn">E.P.R.F. System &nbsp;</a>
         </h1>
     </div>
 </header>
