--- a/view/admin/review_participation.ejs
+++ b/view/admin/review_participation.ejs
@@ -32,5 +32,5 @@
             
         </div>
     </div>
-    <button id="sub_allocation">Submit</button>
+    <div class="sub_allocation_btn"><button id="sub_allocation">Submit</button></div>
 </main>
