--- a/view/admin/view_employees.ejs
+++ b/view/admin/view_employees.ejs
@@ -1,5 +1,5 @@
 <main>
-    <div table-responsive custom_table_outer_container>
+    <div custom_table_outer_container>
         <table class="table caption-top table-striped table-bordered custom_table">
             <!-- <caption>List of users</caption> -->
             <thead>
