--- a/view/sign_in.ejs
+++ b/view/sign_in.ejs
@@ -12,7 +12,7 @@
                     <input id="admin" type="radio" name="account_type" value="admin">
                 </div>
             </div>
-            <input name="email" type="email" placeholder="Email" required/>
+            <input name="email" type="email" placeholder="Email" required autofocus/>
             <i class="fa fa-user"></i>
             <input name="password" class="password" type="password" placeholder="Password" required/>
             <i class="password fa fa-key"></i>
