--- a/public/static/css/styles.css
+++ b/public/static/css/styles.css
@@ -3,10 +3,27 @@
   box-sizing: border-box;
 }
 
+button.navbar-toggler {
+  color: #d8e0e6;
+}
+
+.custom_menu {
+  margin-left: -2.1rem;
+  margin-right: 0.2rem;
+}
+.custom_menu li {
+  width: 13rem;
+  margin-left: 2.8rem;
+}
+.custom_menu button {
+  border: 1px solid #2196F3;
+}
+
 main {
   min-height: 72vh;
-  overflow: scroll;
-  justify-content: center;
+  overflow: auto;
+  margin-left: 0.2rem;
+  margin-right: 0.2rem;
 }
 
 main::-webkit-scrollbar {
@@ -18,10 +35,7 @@ main::-webkit-scrollbar {
 }
 
 .custom_table {
-  max-width: 91vw;
-  margin-right: 2.6rem;
   min-width: 94vw;
-  margin-left: 3rem;
   align-self: center;
 }
 
@@ -43,7 +57,7 @@ header div {
   width: 30vw;
   margin-top: 0.5rem;
   position: relative;
-  margin-left: 6rem;
+  text-align: center;
 }
 
 @media (max-width: 1200px) {
@@ -81,7 +95,7 @@ header div {
 /* The typing effect */
 @keyframes typing {
   0% {
-    width: 76%;
+    width: 80%;
   }
   25% {
     width: 100%;
@@ -90,7 +104,7 @@ header div {
     width: 100%;
   }
   100% {
-    width: 76%;
+    width: 80%;
   }
 }
 /* The typewriter cursor effect */
@@ -141,7 +155,8 @@ footer {
   display: flex;
   justify-content: space-around;
 }
-.pos-outer-container div div select, .pos-outer-container div div input {
+.pos-outer-container div div select,
+.pos-outer-container div div input {
   background-color: transparent;
   color: #2196F3;
   border: none;
@@ -186,10 +201,10 @@ footer {
   display: flex;
   flex-direction: column;
   justify-content: left;
-  width: 27rem;
   padding: 1rem;
 }
-.outer-container div div div input, .outer-container div div div label {
+.outer-container div div div input,
+.outer-container div div div label {
   height: 1.9rem;
   color: #2196F3;
   margin-bottom: 1rem;
@@ -200,8 +215,6 @@ footer {
   font-size: 1.2rem;
   border-bottom: #2196F3 0.2rem solid;
   background-color: transparent;
-}
-.outer-container div div div input {
   padding-bottom: 0.8rem;
 }
 .outer-container div div div select {
@@ -217,6 +230,8 @@ footer {
   margin-right: 2rem;
 }
 .outer-container button {
+  margin-left: 1rem;
+  margin-bottom: 2rem;
   height: 3rem;
   width: 15rem;
   background-color: transparent;
@@ -312,21 +327,9 @@ body {
     transform: rotateZ(359deg);
   }
 }
-.wrapper {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  justify-content: center;
-  width: 100%;
-  min-height: 82vh;
-  background: rgba(4, 40, 68, 0.85);
-}
-
 .login {
   border-radius: 2px 2px 5px 5px;
   padding: 10px 20px 20px 20px;
-  width: 90%;
-  max-width: 320px;
   background: #ffffff;
   position: relative;
   padding-bottom: 80px;
@@ -356,13 +359,17 @@ body {
   flex-direction: row;
   color: #2196F3;
   justify-content: space-between;
+  justify-items: center;
+  align-items: center;
 }
 .login .account div {
   display: flex;
-  justify-content: space-between;
+  align-items: center;
+  justify-content: center;
 }
 .login .account div label {
   margin-right: 1rem;
+  margin-bottom: 0.5rem;
 }
 .login .below_links {
   display: flex;
@@ -404,10 +411,10 @@ body {
   text-decoration: none;
 }
 .login .title {
-  color: #444;
+  color: #2196F3;
   font-size: 1.2em;
   font-weight: bold;
-  margin: 10px 0 30px 0;
+  margin: 10px 0 0 0;
   border-bottom: 1px solid #eee;
   padding-bottom: 20px;
 }
@@ -439,10 +446,10 @@ body {
   border-top-color: rgba(255, 255, 255, 0.3);
   border-radius: 100%;
   left: 50%;
-  top: 0;
+  top: 9rem;
   opacity: 0;
   margin-left: -20px;
-  margin-top: -20px;
+  margin-top: -25px;
   animation: spinner 0.6s infinite linear;
   transition: top 0.3s 0.3s ease, opacity 0.3s 0.3s ease, border-radius 0.3s ease;
   box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.2);
@@ -455,22 +462,20 @@ body {
 }
 
 .main_login {
-  width: 93vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   height: 85vh;
-  margin-left: 3rem;
+  background-color: #afcfe9;
 }
 
 .performance {
   overflow: scroll;
-  height: 70vh;
-  width: 94vw;
-  margin-left: 3rem;
   color: #2196F3;
 }
 .performance .upper_outer {
   overflow: scroll;
   height: 70%;
-  width: 100%;
   display: flex;
 }
 .performance .upper_outer .emp {
@@ -492,8 +497,6 @@ body {
 }
 .performance .upper_outer .performance_review {
   overflow: scroll;
-  height: 100%;
-  width: 65%;
   text-align: center;
 }
 .performance .upper_outer .performance_review .sub_performance_review {
@@ -513,8 +516,6 @@ body {
 }
 .performance .upper_outer .performance_review textarea {
   margin-top: 1rem;
-  width: 95%;
-  height: 95%;
   border-color: #2196F3;
   color: #2196F3;
   outline-color: #2196F3;
@@ -527,17 +528,8 @@ body {
 }
 .performance .feedback .sub_feedback {
   display: flex;
-}
-.performance .feedback .sub_feedback textarea {
-  margin-top: 1rem;
-  margin-left: 1.5rem;
-  width: 78%;
-  height: 95%;
-  margin-right: 1.5rem;
-  border-color: #2196F3;
-  color: #2196F3;
-  outline-color: #2196F3;
-  font-size: 1.2rem;
+  margin: 1rem 0 1rem 0;
+  justify-content: center;
 }
 .performance .feedback .sub_feedback label {
   font-size: 1.5rem;
@@ -545,19 +537,35 @@ body {
   margin-left: 1rem;
   margin-top: 0.5rem;
 }
-.performance .feedback .sub_feedback button {
+
+.feed_submit {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.feed_submit textarea {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+  border-color: #2196F3;
+  color: #2196F3;
+  outline-color: #2196F3;
+  font-size: 1.2rem;
+}
+.feed_submit button {
   border: none;
   border: 1px solid #2196F3;
   color: #2196F3;
   background-color: transparent;
   outline: none;
   font-size: 1.2rem;
-  margin-top: 75%;
 }
 
 @media (max-width: 992px) {
   .user_details {
     display: none;
+  }
+  .performance_review textarea {
+    width: 98%;
   }
 }
 textarea::-webkit-scrollbar {
@@ -584,7 +592,8 @@ textarea::-webkit-scrollbar {
   display: none;
 }
 
-.bi, .feedback_img {
+.bi,
+.feedback_img {
   font-size: 1.2rem;
   color: #2196F3;
 }
@@ -607,8 +616,6 @@ textarea::-webkit-scrollbar {
 .allocate_perf {
   display: flex;
   height: 60vh;
-  width: 94vw;
-  margin-left: 3rem;
   color: #2196F3;
 }
 .allocate_perf select {
@@ -634,7 +641,7 @@ textarea::-webkit-scrollbar {
   background-color: #c1d3e4;
 }
 .allocate_perf .allocated_by {
-  width: 20%;
+  width: 25%;
   text-align: center;
   overflow-x: hidden;
   overflow-y: scroll;
@@ -674,15 +681,18 @@ textarea::-webkit-scrollbar {
   font-weight: bold;
 }
 
-#sub_allocation {
+.sub_allocation_btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.sub_allocation_btn button {
   border: none;
   border: 1px solid #2196F3;
   color: #2196F3;
   background-color: transparent;
   outline: none;
   font-size: 1.2rem;
-  margin-left: 47%;
-  margin-top: 1.2rem;
 }
 
 .select_mul::-webkit-scrollbar {
