--- a/view/_admin_menu.ejs
+++ b/view/_admin_menu.ejs
@@ -1,11 +1,11 @@
 <menu>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary custom_menu">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="collapse navbar-collapse custom_collapse" id="navbarSupportedContent">
                 <ul class="nav justify-content-center">
                     <!-- <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="/admin/timeline">Timeline</a>
