--- a/view/_footer.ejs
+++ b/view/_footer.ejs
@@ -1,7 +1,7 @@
 <footer class="no-select">
     <div>
         <h6 class="typewriter">
-            © build by Charanjeet Singh.
+            © Build by Charanjeet Singh.
         </h6>
     </div>
 </footer>
