--- a/view/admin/view_feedback.ejs
+++ b/view/admin/view_feedback.ejs
@@ -25,14 +25,18 @@
                     <div class="emp">Performance Review</div>
                 </div>
                 <div>
-                    <textarea cols="30" rows="8" disabled><%=performance.content%></textarea>
+                    <textarea cols="80" rows="8" disabled><%=performance.content%></textarea>
                 </div>
             </div>
         </div>
+        <div class="feedback ">
+        </div>
         <div class="feedback">
             <div class="sub_feedback">
-                <label>Feedback:</label>
-                    <textarea name="feedback" cols="40" rows="4" disabled><%=performance.feedback.content%></textarea>
+                <label>Feedback</label>
+            </div>
+            <div class="feed_submit">
+                    <textarea name="feedback" cols="80" rows="4" disabled><%=performance.feedback.content%></textarea>
             </div>
         </div>
     </div>
