--- a/view/sign_in.ejs
+++ b/view/sign_in.ejs
@@ -2,6 +2,7 @@
     <div class="wrapper main_login"">
         <form id="login" class="login" method="post">
             <p class="title">Log in</p>
+            <p>admin@gmail.com</p>
             <div class="account">
                 <div>
                     <label for="employee">Employee</label>
